# CODEX--

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  0700_HK_technical_analysis.json  0700_hk_analysis.json  409_CONFLICT_FORCE_FIXED_SUCCESS.md  AAPL_濾網最佳化綜合分析報告.txt  ACTUAL_IMPORT_SUCCESS_REPORT.md  ADD_TASK_GUIDE.md  AGENT_MANAGEMENT_SYSTEM_COMPLETE_REPORT.md  AGENT_使用指南.md  ALL_STRATEGIES_IMPLEMENTATION_REPORT.md  ALL_TASKS_COMPLETION_REPORT.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  API_ANALYSIS_SUMMARY.md  API_DOCUMENTATION.md  API_INTEGRATION_IMPLEMENTATION_REPORT.md  API_OPTIMIZATION_COMPLETE_REPORT.md  API_OPTIMIZATION_IMPLEMENTATION_REPORT.md  API_OPTIMIZATION_QUICKSTART.md  ARCHITECTURE_REFACTOR_IMPLEMENTATION_REPORT.md  AUTOMATION_EXECUTION_SUMMARY.md  BACKGROUND_AGENT_COMPLETION_REPORT.md  BACKTEST_ADVANCED_FEATURES_COMPLETE_REPORT.md  BACKTEST_FEATURE_VALIDATION_REPORT.md  BATCH_OPERATION_REPORT.md  BOT_CONFLICT_DIAGNOSIS.md  BOT_CONFLICT_RESOLVED_FINAL_REPORT.md  BOT_NO_RESPONSE_DIAGNOSIS.md  BOT_OPTIMIZATION_STATUS.md  BOT_STARTUP_SUCCESS_REPORT.md  BOT_STARTUP_TROUBLESHOOTING.md  BOT_USAGE_GUIDE.md  BUGFIX_REPORT.md  CCB_0939_COMPREHENSIVE_BACKTEST_20251025_213509.md  CHROME_DEVTOOLS_SCRAPER_GUIDE.md  CHROME_MCP_DEBUG_AND_FIX_REPORT.md  CHROME_MCP_VERIFICATION_REPORT.md  (+638 more)
.claude/: improved_terminal_mcp.py  persistent-terminal-manager.py  settings.local.json  terminal_cli.py  test_improved_terminal_mcp.py  validate_terminal_fix.py
.cursor/: mcp.json
.specify/: 1-hk-data-charts-spec.md
_archived/: README.md  complete_project_system.py  demo_real_data_backtest.py  demo_verification_system.py  find_hkex_data.py  find_hkex_selectors.py  generate_visualization_data.py  parse_hkex_data.py  run_complete_macro_analysis.py  system_status_report.py  test_system_startup.py
analysis_output/: comprehensive_analysis_report_20251024_035022.txt  hibor_6m_strategy_report_20251024_035308.txt  hibor_6m_strategy_report_20251024_105051.txt  hibor_6m_strategy_report_20251024_105057.txt  risk_metrics_20251024_035022.json
codex/: .gitignore  QUICKSTART.md  STRATEGY_OPTIMIZER_README.md  pytest.ini  requirements.txt  run_optimizer.bat  run_optimizer.sh  simple_strategy_optimizer.py  項目總結.md
config/: settings.py
data/: portfolio_12345.json  price_alerts.json  sentiment_demo_report.json
docs/: CSD_DATA_ADAPTERS_README.md  DOCS_SYSTEM_README.md  LAYOUT_API_DOCUMENTATION.md  Makefile  OPTIMIZATION_ENDPOINT.md  PHASE8B_DATA_QUALITY_VALIDATION.md  PHASE8_ENHANCED_DATA_README.md  PHASE8_ENHANCED_STRATEGIES.md  REPORT_SYSTEM_DEPLOYMENT_GUIDE.md  RUST_ENGINE_WRAPPER.md  SECURITY_IMPLEMENTATION_GUIDE.md  alternative-data-guide.md  conf.py  faq.md  index.rst  multi-source-integration.md  quickstart.md  technical_indicators_guide.md  troubleshooting.md
examples/: README.md  acceleration_manager_demo.py  alt_data_backtest_example.py  anomaly_detection_example.py  cpu_detector_example.py  csd_data_adapters_demo.py  data_chunker_integration_example.py  data_quality_validation_demo.py  demo_optimization_endpoint.py  enhanced_strategies_demo.py  hkma_hibor_demo.py  indicators_usage_example.py  layout_api_example.py  memory_management_demo.py  new_architecture_demo.py  observability_demo.py  parallel_optimizer_example.py  phase2_complete_demo.py  phase3_async_demo_simple.py  phase3_async_optimization_demo.py  phase3_basic_demo.py  phase3_final_validation.py  phase8_enhanced_data_examples.py  python_integration.py  qf_lib_integration_demo.py  quality_report_example.py  quality_reporter_api_example.py  report_system_example.py  rust_engine_example.py  trade_data_integration_demo.py
forest-focusCODEX/: .gitignore  EXECUTION_SUMMARY.txt  NEXT_STEPS.md  README.md  pytest.ini  requirements.txt  rsi_backtest_optimizer.py
frontend/: index.html  package.json
gov_crawler/: .gitignore  ALTERNATIVE_DATA_ANALYSIS_REPORT.md  ANALYSIS_COMPLETION_SUMMARY.md  CHROME_DEVTOOLS_VERIFICATION_REPORT.md  COMPLETE_DATA_COLLECTION_GUIDE.md  DATA_ACCESS_QUICK_GUIDE.txt  DATA_COLLECTION_REPORT.md  FILE_INDEX.md  FINAL_EXECUTION_SUMMARY.md  GOV_DATA_INTEGRATION_SUCCESS.md  HK_ALT_DATA_EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE1_PHASE2_INTEGRATION_REPORT.md  PHASE1_QUICK_REFERENCE.md  (+36 more)
rust-core/: Cargo.toml
rust-core/benches/: backtest_bench.rs  simple_bench.rs
rust-core/examples/: indicators_example.rs
rust-core/src/: lib.rs  metrics_test.rs  types.rs
rust-core/src/backtest/: engine.rs  metrics.rs  mod.rs  optimization.rs  optimization.rs.backup
rust-core/src/indicators/: adx.rs  atr.rs  bollinger.rs  cci.rs  ichimoku.rs  kdj.rs  macd.rs  mod.rs  moving_average.rs  obv.rs  rsi.rs  sar.rs
rust-core/src/optimization/: mod.rs
rust-core/tests/: test_end_to_end_performance.rs  test_indicators_comprehensive.rs  test_memory_usage.rs  test_parallel_throughput.rs  test_parameter_optimization_performance.rs  test_single_backtest_performance.rs
rust-nonprice/: Cargo.toml  FILES_CREATED_PHASE5.txt  PHASE4_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE7_FINAL_SUMMARY.md  TODO.md  build.sh  demo.rs  demo_simple.rs  stock_trading_demo.rs  test_real_data.py  test_real_hibor_data.rs  test_signals.rs  verify_signal_generation.sh
rust-nonprice/examples/: basic_usage.rs  optimization.rs  python_demo.py
rust-nonprice/python/: Cargo.toml  README.md
rust-nonprice/python/src/: lib.rs
rust-nonprice/src/: cli.rs  lib.rs  lib_minimal.rs
rust-nonprice/src/backtest/: engine.rs  metrics.rs  mod.rs  report.rs
rust-nonprice/src/core/: backtest.rs  data.rs  error.rs  mod.rs  validators.rs
rust-nonprice/src/data/: loader.rs  mod.rs  processor.rs  validator.rs
rust-nonprice/src/strategy/: combiner.rs  mod.rs  optimizer.rs  signals.rs  traits.rs
rust-nonprice/src/utils/: logging.rs  math.rs  mod.rs  parallel.rs
rust-nonprice/tests/integration/: test_optimization.rs
rust-nonprice/tests/performance/: test_optimization_performance.rs
rust-nonprice/tests/unit/: test_signal_generation.rs
(+1578 files in other folders)
