[workspace]
members = [
    "rust-core",
    "rust-nonprice",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quant Team"]
rust-version = "1.75"
license = "MIT"
description = "High-performance quantitative trading system in Rust"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
num-traits = "0.2"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"

# PyO3
pyo3 = { version = "0.21", features = ["auto-initialize"] }
numpy = "0.21"
pandas = "0.1"
