[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-trading-system"
version = "7.0.0"
description = "CODEX Hong Kong Stock Trading System"
authors = [{name = "Claude Code", email = "code@anthropic.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["trading", "quantitative", "hong-kong", "stocks", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-telegram-bot>=20.7",
    "ta-lib>=0.4.28",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx[test]>=0.25.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.6.0",
    "tox>=4.11.0",
    "coverage>=7.3.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
api = [
    "openapi-python-client>=0.20.0",
    "pydantic[email]>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/claude-code"
Repository = "https://github.com/anthropics/claude-code"
Documentation = "https://docs.codex-trading-system.com"
Changelog = "https://github.com/anthropics/claude-code/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "docs*", "scripts*"]

# ======================
# Black Configuration
# ======================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.pytest_cache
  | \.coverage
  | htmlcov
  | .tox
  | .venv
  | venv
  | ENV
  | env
  | __pycache__
)/
'''

# ======================
# isort Configuration
# ======================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
known_third_party = [
    "pytest",
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "requests",
    "httpx",
    "pydantic",
    "structlog",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/node_modules/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

# ======================
# MyPy Configuration
# ======================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
cache_dir = ".mypy_cache"
files = ["src", "tests"]
exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    ".tox",
    "migrations",
    "node_modules",
]

# Allow untyped calls for specific modules
[[tool.mypy.overrides]]
module = [
    "talib.*",
    "yfinance.*",
    "ta.*",
    "mplfinance.*",
    "plotly.*",
    "seaborn.*",
]
ignore_missing_imports = true

# ======================
# Pytest Configuration
# ======================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "database: marks tests as database tests",
    "external: marks tests as requiring external services",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ======================
# Coverage Configuration
# ======================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/node_modules/*",
    "*/build/*",
    "*/dist/*",
    "*/scripts/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ======================
# Bandit Configuration
# ======================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/*.py"]

# ======================
# Flake8 Configuration
# ======================
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    "node_modules",
    "migrations",
    "alembic",
    "tests/fixtures",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
    "alembic/*:E501",
]
max-complexity = 10

# ======================
# Pydocstyle Configuration
# ======================
[tool.pydocstyle]
convention = "google"
match_dir = "(?!migrations|__pycache__|\\.venv|venv|build|dist|node_modules).*"
add_ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
]
match = "(?!test_.*)\\.py$"

# ======================
# Ruff Configuration
# ======================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "B018"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.mccabe]
max-complexity = 10

# ======================
# Coverage Configuration
# ======================
[tool.hatch.metadata]
allow-direct-references = true
