[package]
name = "rust-nonprice-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for rust-nonprice"
license = "MIT"

[lib]
name = "rust_nonprice"
crate-type = ["cdylib"]

[dependencies]
# Parent project
rust-nonprice = { path = ".." }

# PyO3
pyo3 = { version = "0.22", features = ["pyo3-macros", "extension-module"] }
pyo3-numpy = "0.22"

# Data handling
numpy = "1.26"
polars = { version = "0.40", features = ["python"] }

[build-dependencies]
pyo3-build-config = "0.22"
